@@ -33,7 +33,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.QueryParameter;
 
@@ -66,7 +66,6 @@ public class AndroidSDKInstaller extends DownloadFromUrlInstaller {
 
     public class AndroidSDKInstallable extends NodeSpecificInstallable {
 
-        @SuppressFBWarnings(value = "EI_EXPOSE_REP2")
         public AndroidSDKInstallable(Installable inst) {
             super(inst);
         }
@@ -166,7 +165,7 @@ public class AndroidSDKInstaller extends DownloadFromUrlInstaller {
         }
     }
 
-    private void installBasePackages(FilePath sdkRoot, TaskListener log) throws IOException, InterruptedException {
+    private void installBasePackages(FilePath sdkRoot, @NonNull TaskListener log) throws IOException, InterruptedException {
         FilePath sdkmanager = sdkRoot.child("tools").child("bin").child("sdkmanager" + platform.extension);
         if (!sdkmanager.exists()) {
             sdkmanager = sdkRoot.child("cmdline-tools").child("bin").child("sdkmanager" + platform.extension);
@@ -193,7 +192,7 @@ public class AndroidSDKInstaller extends DownloadFromUrlInstaller {
                     }
                     return defaultPackage.equals(i.getId());
                 })) //
-                .collect(Collectors.toList());
+                .toList();
 
         if (!defaultPackages.isEmpty()) {
             // get component with the available latest version
@@ -210,7 +209,9 @@ public class AndroidSDKInstaller extends DownloadFromUrlInstaller {
                     // remove release candidate versions for stable channel
                     .filter(p -> channel != Channel.STABLE || p.getVersion().getQualifier() == null) //
                     .sorted(Collections.reverseOrder()) // in case of wildcards we takes latest version
-                    .findFirst().get().getId()));
+                    .findFirst()
+                    .get()
+                    .getId()));
 
             SDKManagerCLIBuilder.with(sdkmanager) //
                     .proxy(Jenkins.get().proxy) //
